.opsera-cwa-test-4/k8s/overlays/qa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-cwa-test-4-qa
  labels:
    tenant: opsera
    app: cwa-test-4
    environment: qa
    managed-by: opsera-c2c
